# incre

./: .gitignore  README.md  incre.config.json  package.json  tsconfig.json
lib/: index.ts
native/: Cargo.toml
native/src/: cache.rs  lib.rs
